# leptos-hotkeys

./: .all-contributorsrc  .editorconfig  .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js
.github/actions/get-toolchain/: action.yml
.github/workflows/: ci.yml  csr.yml  hydrate.yml
example/demo/: .gitignore  Cargo.toml  index.html  input.css
example/demo/src/: app.rs
example/demo/style/: output.css
examples/demo/: Cargo.toml  README.md
examples/demo/src/: app.rs  main.rs
examples/ssr-demo/: Cargo.toml  README.md
examples/ssr-demo/src/: app.rs  error_template.rs  lib.rs  main.rs
leptos_hotkeys/: Cargo.toml
leptos_hotkeys/src/: context.rs  hotkey.rs  hotkeys_provider.rs  lib.rs  macros.rs  prelude.rs  types.rs  use_hotkeys.rs
src/: hotkeys_provider.rs  input.css  lib.rs  macros.rs  prelude.rs  styles.css  types.rs  use_hotkeys.rs
workspace/demo/: Cargo.toml  index.html
workspace/demo/src/: app.rs
workspace/ssr-demo/: Cargo.toml  README.md
workspace/ssr-demo/src/: app.rs
