[package]
name = "leptos_hotkeys"
version = "0.1.2"
edition = "2021"
description= "A library that declaratively pairs keybindings with callbacks for Leptos applications."
license = "MIT"
repository = "http://github.com/friendlymatthew/leptos-hotkeys"
readme = "README.md"
authors=["Matthew Kim <matthewkmkim@gmail.com>" , "Robert Junkins <roberthenryjunkins@gmail.com>"]

keywords=["leptos", "hotkeys", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
wasm-bindgen = "0.2.89"
log = "0.4.20"

# needed for macro exports
[lib]
name = "leptos_hotkeys"
path = "src/lib.rs"
