[package]
name = "leptos_hotkeys"
version = "0.2.0-alpha.2"
edition = "2021"
description = "A library that declaratively pairs keybindings with callbacks for Leptos applications."
license = "MIT"
repository = "http://github.com/gaucho-labs/leptos-hotkeys"
readme = "../README.md"
authors = ["Matthew Kim", "Álvaro Mondéjar Rubio", "Robert Junkins"]
keywords = ["leptos", "hotkeys", "wasm"]

[dependencies]
leptos = "0.6"
log = { version = "0.4", optional = true }
wasm-bindgen = "0.2"
web-sys = "0.3"

[features]
debug = ["dep:log"]
ssr = []
