[package]
name = "leptos_hotkeys"
version = "0.2.21"
edition = "2021"
description = "A library that declaratively pairs keybindings with callbacks for Leptos applications."
license = "MIT"
repository = "https://github.com/gaucho-labs/leptos-hotkeys"
readme = "../README.md"
authors = ["Matthew Kim", "Álvaro Mondéjar Rubio", "Robert Junkins", "Zak Stucke"]
keywords = ["leptos", "hotkeys", "wasm"]

[dependencies]
leptos = "0.6"
log = { version = "0.4", optional = true }
wasm-bindgen.workspace = true
web-sys.workspace = true

[features]
debug = ["dep:log"]
ssr = []
use_key = []