[package]
name = "leptos_hotkeys"
version = "0.2.2"
edition = "2021"
description = "A library that declaratively pairs keybindings with callbacks for Leptos applications."
license = "MIT"
repository = "https://github.com/gaucho-labs/leptos-hotkeys"
readme = "../README.md"
authors = [
  "Matthew Kim",
  "Álvaro Mondéjar Rubio",
  "Robert Junkins",
  "Zak Stucke",
  "Phillip Baird",
]
keywords = ["leptos", "hotkeys", "wasm"]

[dependencies]
leptos = { version = "0.7" }
log = { version = "0.4", optional = true }
send_wrapper = "0.6"
wasm-bindgen.workspace = true
web-sys.workspace = true

[features]
debug = ["dep:log"]
hydration = []
ssr = []
use_key = []
