[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos", features = [
    "csr",
    "nightly",
] }
console_error_panic_hook = "0.1"
console_log = "1"
copy_dir = "0.1"
leptos_meta = { git = "https://github.com/leptos-rs/leptos" }
leptos_router = { git = "https://github.com/leptos-rs/leptos" }
leptos_router_macro = { git = "https://github.com/leptos-rs/leptos" }
log = "0.4"
leptos_hotkeys = { path = "../../leptos_hotkeys", features = [
    "debug",
    "use_key",
] }
