[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1"
console_log = "1"
copy_dir = "0.1"
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
leptos_router_macro = { version = "0.7" }
log = "0.4"
leptos_hotkeys = { path = "../../leptos_hotkeys", features = [
  "debug",
  "use_key",
] }
